# EFREI-SE-TP1

./: CMakeLists.txt  main.c  question1.c  question1.h  question2.c  readme.txt  test_Q1.c  test_Q2.c
correction/: gestion_tableaux.c  gestion_tableaux.h  test_gestion_tableaux.c
exercices/: question1.c  question1.h  question2.c  question2.h  question3.c  question3.h  question4.c  question4.h
files/: source.txt  test.txt
site/en/tutorials/keras/: classification.ipynb
tests/: test_Q1.c  test_Q1.h  test_Q2.c  test_Q2.h  test_Q3.c  test_Q3.h
